--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div style="width:1980px; height:1080px;">
 			<div id="choleraDeathsTable"style="width:100%; height:100%;"></div>
 		</div>
+		<p align="center">This time illustrates the correlation of cholera attacks and deaths along a timeline. After Snow concluded that the attacks were caused by water on Sept. 10 the number of attacks begin to slowly approach 0.</p>
 		<div style="width:1980px; height:1080px;">
 			<div id="choleraDeathsChart" style="width:100%; height:100%;"></div>
 		</div>
@@ -25,6 +26,7 @@
 		<div style="width:1980px; height:1080px; ">
 			<div id="naplesCholeraAgeSexChart" style="width:100%; height:100%;"></div>
 		</div>
+		<p align="center">This bar graph illustrates the population of elderly were affected the most to cholera regardless of sex.</p>
 
 		<div style="width:1980px; height:720px;">
 			<div id="ukCensusTable"style="width:100%; height:100%;"></div>
@@ -38,10 +40,12 @@
 		<div style="width:1980px; height:1080px;">
 			<div id="ukCensusMenVsWomenPieChart" style="width:100%; height:100%;"></div>
 		</div>
+		<p align="center">It can be seen from the census there was roughly 95,000 elderly people. And nearly 80,000 to the outbreak. The outbreak demolished the elderly population.</p>
 
 		<div style="width:1980px; height:1080px">
 			<div id="choleraMap" style="width:100%; height:100%"></div>
 		</div>
+		<p align="center">From this map we can see that the outbreak is the most concentrated at the broadwick water pump then radiates out.</p>
 
 		</div>Made with plot.ly</div>
 		<div>Data of Cholera from Robin Wilson</div>
